Fixed the middle content by spacing in between

--- a/css/about.css
+++ b/css/about.css
@@ -96,20 +96,38 @@ nav{
     display:flex;
     flex-wrap:wrap;
     margin-bottom: 4%;
+    justify-content:space-between ;
+    
+}
+.middle-content1 .conTxt1{
+    width:45%;
     border-bottom: 1px dashed black;
     padding-bottom: 2%;
-    max-width: 100
    
+} 
+.middle-content1 .conTxt2{
+    width: 45%;
+    border-bottom: 1px dashed black;
+    padding-bottom: 2%;
    
 }
-.middle-content1 .conTxt{
-    width:50%;
-    padding: 0 1%;
-} 
 
-.middle-content2 .conTxt{
-    width: 50%;
+.middle-content2 .conTxt1{
+    width: 45%;
     padding-bottom: 2%;
+    border-bottom: 1px dashed black;
+    
+   
+}
+.middle-content2 .conTxt2{
+    width: 45%;
+    border-bottom: 1px dashed black;
+    padding-bottom: 2%;
+   
+}
+button{
+    padding: 2%;
+    border-radius: 10%;
 }
 .bottom{
     padding-bottom: 2%;
